--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -1,4 +1,4 @@
-name: Build Site
+name: Build and Deploy
 
 on:
   push:
@@ -7,8 +7,10 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -21,11 +23,16 @@ jobs:
       - name: Build
         run: node build.js
 
-      - name: Commit build files
+      - name: Deploy to GitHub Pages
         if: github.ref == 'refs/heads/main'
         run: |
+          touch build/.nojekyll
           git config --global user.name "${{ github.actor }}"
           git config --global user.email "${{ github.actor }}@users.noreply.github.com"
-          git add build/
-          git commit -m "Update build files" || echo "No changes to commit"
-          git push origin main || echo "No changes to push"
+          git checkout --orphan gh-pages
+          git rm -rf .
+          cp -r build/* .
+          cp build/.nojekyll .
+          git add .
+          git commit -m "Deploy to GitHub Pages"
+          git push -f origin gh-pages
